z-index fix

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 9999;
 }
 
 .topnav a {
@@ -102,16 +103,19 @@
   height: 50vh;
   -webkit-animation: bounce-in-top 1.1s both;
   animation: bounce-in-top 1.1s both;
+  margin: 10px;
+  line-height: 150%;
 }
 
 .speech h1 {
   margin-top: 40px;
   font-size: 1.8em;
   padding: 15px;
+  font-family: sans-serif
 }
 
 .speech h2 {
-  font-size: 1.3em;
+  font-size: 1.1em;
 }
 
 @keyframes bounce-in-top {
@@ -168,12 +172,12 @@
 }
 
 @media screen and (max-width: 600px) {
-  .speech h2 {
+  .speech h3 {
     display: none;
   }
 }
 .speech h3 {
-  font-size: 1.2em;
+  font-size: 1 em;
   width: 80%;
 }
 
